--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
-    <link rel="stylesheet" type="text/css" href={% static "main/scss/style2.css" %}>
+    <link rel="stylesheet" type="text/css" href="style2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
@@ -23,17 +22,17 @@
     <div class="slider">
             <div class="slide-track">
                 <div class="slide">
-                    <img src="{% static "main/img/ukr1.jpg" %}"  alt="" />
+                    <img src="img/ukr1.jpg" alt="" />
                 </div>
             </div>
     </div>
 
             <div class="container-absolute">
                 <div class="emblem">
-                    <img src="{% static "main/img/emblem1.png" %}" alt="">
+                    <img src="img/emblem1.png" alt="">
                 </div>
                 <div class="flag">
-                    <img src="{% static "main/img/flag1.png" %}" alt="">
+                    <img src="img/flag1.png" alt="">
                 </div>
                 <div class="box">
                     <div class="box__title ">
