--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                         <br>
                         Будь корисний, підтримай оборону
                     </div>
-                    <div class="mod3">Zelle - 17732412660<br>
-                        Bank id -<br></div>
+                    <div class="mod3">Zelle - 17732412660<br></div>
                     <div class=" mod02">
                         Пряме включення зі Львова 3 рази на день.
                         По посиланню, нижче:
